# ks-IM

./: .gitignore  README.md  init.sql
Client/: CMakeLists.txt  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  RegisterWindow.cpp  RegisterWindow.h  RelationNotifyWidget.cpp  RelationPage.cpp  SessionPage.cpp  SettingPage.cpp  UserInfoCard.cpp  UserPage.cpp  logger.cpp  logger.h  main.cpp  net.cpp  resources.qrc  setting.cpp  user.cpp  ws.cpp
Client/include/: FriendListModel.h  FriendTreeViewItem.h  LoginWindow.h  MainWindow.h  MessageListModel.h  RegisterWindow.h  RelationNotifyWidget.h  RelationPage.h  SessionListModel.h  SessionPage.h  SettingPage.h  UserInfoCard.h  UserPage.h  afx.h  logger.h  net.h  setting.h  user.h  ws.h
Client/model/: FriendListModel.cpp  FriendTreeViewItem.cpp  MessageListModel.cpp  SessionListModel.cpp
Client/proto/: protocol.pb.cc  protocol.pb.h  protocol.proto
Server/Gate/: config.yaml  go.mod  go.sum  main.go
Server/Gate/consul/: consul.go
Server/Gate/log/: log.go
Server/Gate/logic/: response.go
Server/Gate/router/: response.go  routes.go
Server/Gate/settings/: settings.go
Server/Message/: config.yaml  go.mod  go.sum  main.go
Server/Message/consul/: consul.go
Server/Message/db/mysql/: mysql.go
Server/Message/db/redis/: mq.go  redis.go
Server/Message/log/: log.go
Server/Message/logic/: GroupChat.go  SingleChat.go  chat.go  connection.go  consts.go  mq.go
Server/Message/protocol/: data.go  protocol.pb.go  protocol.proto
Server/Message/router/: routes.go
Server/Message/settings/: settings.go
Server/Message/utils/: IDGenerator.go
Server/User/: config.yaml  go.mod  go.sum  main.go
Server/User/consul/: consul.go
Server/User/db/mysql/: mysql.go
Server/User/db/redis/: mq.go  redis.go
Server/User/ec/: ec.go
Server/User/log/: log.go
Server/User/logic/: const.go  groups.go  message.go  mq.go  relationship.go  response.go  user.go
Server/User/model/: model.go  request.go  response.go
Server/User/router/: routes.go
Server/User/settings/: settings.go
